change application launcher (windows) to use rundll